# outlierDetection

./: CMakeLists.txt  README.md
include/: Frame.h  OrientationSolver.h
src/: Frame.cpp  OrientationSolver.cpp  main.cpp
